// command to create pb.go file 
// protoc *.proto --go_out=plugins=grpc:. --go_opt=paths=source_relative
syntax = "proto3";

package order_grpc;

option go_package = "./";
service Order {
    rpc GetOrderById (OrderRequest) returns (OrderDetailReply) {}
    rpc GetOrderList (Empty) returns (OrdersReply){}
    rpc UpdateOrder (UpdateOrderRequest) returns (OrderReply) {}
    rpc CreateOrder (CreateOrderRequest) returns (OrderReply) {}
    rpc DeleteOrder (OrderRequest) returns (OrderReply) {}
}

message Empty {}

message OrdersReply {
    repeated OrderDetailReply orders = 1;
}

message OrderDetailReply {
    int32 id = 1;
    OrderUserReply user = 2;
    repeated OrderProductDetailReply products = 3;
    int32 orderPrice = 4;
}

message OrderUserReply{
    int32 userId =1;
    string userName =2;
}

message OrderProductDetailReply{
    int32 productId = 1;
    string productName = 2;
    int32 productPrice = 3;
    int32 productAmount = 4;
}

message OrderReply {
    int32 id = 1;
    int32 userId = 2;
    repeated OrderProductReply products = 3;
}

message OrderProductReply {
    int32 productId = 1;
    int32 productAmount = 2;
}

message OrderRequest {
    int32 id =1;
}

message UpdateOrderRequest {
    int32 id = 1;
    int32 userId = 2;
    repeated UpdateOrderProductRequest product = 3;
}

message UpdateOrderProductRequest{
    int32 productId = 1;
    int32 productAmount =2;
}

message CreateOrderRequest {
    int32 userId = 1;
    repeated UpdateOrderProductRequest products = 2;
}